--- a/src/components/Navigation/SideMenu.css
+++ b/src/components/Navigation/SideMenu.css
@@ -293,7 +293,12 @@
 }
 
 .side-menu-shortcut-emoji {
-    font-size: 1.4rem;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
 }
 
 .side-menu-shortcut-label {
